# webcrawler

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  crawl_website.py  glama.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cli-flag-parity.yml
bench/: .gitignore  autoresearch.py  eval_mrr.py  program.md  run_offline.py
bench/fixtures/: api_docs.html  api_docs.queries.json  blog_article.html  blog_article.queries.json  landing_page.html  landing_page.queries.json  python_docs.html  python_docs.queries.json
bench/heldout/: fastapi_tutorial.html  fastapi_tutorial.queries.json  quotes_toscrape.queries.json
bench/local_replica/: CAMPAIGN_STATUS.md  REPLICA.md  build_labeled_dataset.py  chunk_sweep_analyze.py  chunk_sweep_results.tsv  compare_runs.py  embedder_bakeoff.json  embedder_bakeoff_aggregate.py  run.py  sites_v1.2_canonical.yaml  sweep_results.json  track_a_report.md  track_b_report.md  v010_release_report.md  v099_release_report.md
bench/local_replica/queries/: huggingface-transformers.json  ikea.json  kubernetes-docs.json  mdn-css.json  newegg.json  npr-news.json  postgres-docs.json  react-dev.json  rust-book.json  smittenkitchen.json  stripe-docs.json
benchmarks/: ANSWER_QUALITY.md  COMPARISON.md  COMPARISON_PLAN.md  COMPARISON_quality.md  COST_AT_SCALE.md  Dockerfile  MARKCRAWL_RESULTS.md  METHODOLOGY.md  QUALITY_COMPARISON.md  RESULTS.md  RETRIEVAL_COMPARISON.md  RETRIEVAL_COMPARISON_CONTEXT.md  RETRIEVAL_FASTAPI_200.md  SELF_IMPROVEMENT_SPEC.md  SPEED_COMPARISON.md  _crawlee_worker.py  b1_cli_parity.py  b2_backoff_timing.py  b3_designlens_integration.md  baseline-results-v0.10.0.json  benchmark_all_tools.py  benchmark_answer_quality.py  benchmark_markcrawl.py  benchmark_quality.py  benchmark_retrieval.py  crawlee_worker.py  lint_reports.py  preflight.py  quality_scorer.py  run-all.sh  run_benchmarks.py  run_benchmarks.sh  run_comparison.py
benchmarks/colly_crawler/: go.mod  main.go
benchmarks/firecrawl/: setup.sh
benchmarks/self_improvement/: 01_markcrawl_code_review.md  02_benchmark_code_review.md  03_docker_infra_review.md  04_report_style_compliance.md  05_cross_report_consistency.md  06_resilience_restart.md  07_report_data_quality.md  08_persona_reviews.md  09_safeguards.md  MASTER.md  check_cross_report_consistency.py  check_invariants.py  feedback_registry.md
benchmarks/warmup_validation/: results_2026-04-07.txt  test_warmup_impact.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  LLM_PROMPT.md  RAG_RETRIEVAL_RESEARCH.md
markcrawl/: __init__.py  analyzer.py  chunker.py  cli.py  core.py  dispatch.py  dom_cleanup.py  extract.py  extract_cli.py  extract_content.py  fetch.py  images.py  js_detect.py  langchain.py  mcp_server.py  retrieval.py  retry.py  robots.py  scan.py  screenshots.py  site_class.py  state.py  throttle.py  upload.py  upload_cli.py  urls.py  utils.py
markcrawl/seeds/: game-dashboards.txt
specs/: v010-leaderboard-sweep.md  v099-speed-recovery-and-mrr-closure.md
specs/v3-landscape/: backoff-strategy-design.md  fix-plan.md  persona-review-round-1.md  root-cause-diagnosis.md
tests/: test_auto_path_scope.py  test_chunker.py  test_core.py  test_discover.py  test_dispatch.py  test_dom_cleanup.py  test_extract.py  test_images.py  test_js_detect.py  test_path_priority.py  test_quality_scorer.py  test_retrieval_rerank.py  test_retry.py  test_scan.py  test_screenshots.py  test_upload.py
webcrawler/: __init__.py  cli.py  core.py  extract.py  extract_cli.py  upload.py  upload_cli.py
