[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markcrawl"
version = "0.1.0"
description = "Fast Python web crawler for AI & RAG ingestion — crawl, extract, and embed website content with one tool."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "iD8 (AIMLPM)" }
]
keywords = ["markcrawl", "webcrawler", "rag", "ai", "llm", "embeddings", "scraper", "markdown", "mcp", "supabase", "pgvector"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.12.0",
  "requests>=2.31.0",
  "certifi>=2024.2.2"
]

[project.optional-dependencies]
js = [
  "playwright>=1.40.0",
]
extract = [
  "openai>=1.0.0",
  "anthropic>=0.30.0",
  "google-genai>=1.0.0",
]
upload = [
  "openai>=1.0.0",
  "supabase>=2.0.0",
]
mcp = [
  "mcp[cli]>=1.0.0",
]
langchain = [
  "langchain-core>=0.2.0",
]
all = [
  "playwright>=1.40.0",
  "openai>=1.0.0",
  "anthropic>=0.30.0",
  "google-genai>=1.0.0",
  "supabase>=2.0.0",
  "mcp[cli]>=1.0.0",
  "langchain-core>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/AIMLPM/markcrawl"
Repository = "https://github.com/AIMLPM/markcrawl"
Issues = "https://github.com/AIMLPM/markcrawl/issues"

[project.scripts]
markcrawl = "markcrawl.cli:main"
markcrawl-upload = "markcrawl.upload_cli:main"
markcrawl-extract = "markcrawl.extract_cli:main"
markcrawl-mcp = "markcrawl.mcp_server:main"

[tool.setuptools.packages.find]
include = ["markcrawl*"]
